--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ limitations under the License.
         <div id="main">
           <div class="navbar">
             <div class="navbar-logo">
-              <img src="logotext.svg" id="nav-logo-img" alt="logo">
+              <img src="endologo.png" id="nav-logo-img" alt="logo">
             </div>
           </div>
           <div class="nodesbar">
